--- a/styles.css
+++ b/styles.css
@@ -10,10 +10,42 @@ body {
   justify-content: center;
 }
 
+canvas#ttt {
+  cursor: pointer;
+}
+
 p#winner {
   color: #ccc;
   font-family: sans-serif;
   font-size: 64px;
   margin: unset;
   text-align: center;
+}
+
+#inputHolder {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 16px;
+}
+
+#canvasHolder label {
+  position: relative;
+  cursor: pointer;
+  color: #ccc;
+  font-family: sans-serif;
+  font-size: 16px;
+  margin: unset;
+  text-align: center;
+  clear: both;
+}
+
+#canvasHolder #resetButton {
+  position: relative;
+  cursor: pointer;
+  color: #ccc;
+  background: #2c2c2c;
+  border-radius: 4px;
+  border-color: #363636;
 }
